Stick custom data fields behind a toggle

--- a/corehq/apps/custom_data_fields/templates/custom_data_fields/custom_data_fields.html
+++ b/corehq/apps/custom_data_fields/templates/custom_data_fields/custom_data_fields.html
@@ -94,7 +94,9 @@
                                     </span>
                                 </th>
                                 <th class="span1">{% trans "Required" %}</th>
+                                {% if request|toggle_enabled:"CUSTOM_DATA_CHOICES" %}
                                 <th class="span3">{% trans "Choices" %}</th>
+                                {% endif %}
                                 <th class="span1">{% trans "Delete" %}</th>
                             </tr>
                         </thead>
@@ -112,6 +114,7 @@
                                 <td>
                                     <input type="checkbox" data-bind="checked: is_required"/>
                                 </td>
+                                {% if request|toggle_enabled:"CUSTOM_DATA_CHOICES" %}
                                 <td>
                                     <a data-bind="click: addChoice" type="button" class="btn btn-primary" >
                                         <i class="icon-plus"></i> {% trans "Add Choice" %}
@@ -127,6 +130,7 @@
                                         </li>
                                     </ul>
                                 </td>
+                                {% endif %}
                                 <td>
                                     <a type="button"
                                        class="btn btn-danger"
