--- a/corehq/apps/appstore/templates/appstore/project_info.html
+++ b/corehq/apps/appstore/templates/appstore/project_info.html
@@ -295,7 +295,7 @@
                         {% if error_message %}
                             <span class="help-inline">{{ error_message }}</span>
                         {% endif %}
-                        <a class="btn btn-primary"
+                        <a class="btn btn-primary disable-on-submit"
                            data-form="new-project-form"
                            data-toggle="modal"
                            data-target="#licenseAgreement"
