Changed frequency of saving checkpoint, performance tweaks

--- a/custom/ilsgateway/templates/ilsgateway/ewsconfig.html
+++ b/custom/ilsgateway/templates/ilsgateway/ewsconfig.html
@@ -17,6 +17,7 @@
                     <th>Start date</th>
                     <th>Date</th>
                     <th>Checkpoint</th>
+                    <th>Location</th>
                 </tr>
             </thead>
             <tr>
@@ -36,7 +37,6 @@
                     {% endif %}
                 </td>
                 <td>{{ checkpoint.offset }}</td>
-            </tr>
 
         </table>
     {% endif %}
