--- a/corehq/apps/app_manager/templates/app_manager/module_view.html
+++ b/corehq/apps/app_manager/templates/app_manager/module_view.html
@@ -44,6 +44,12 @@
             };
 
             var details = {{ details|JSON }};
+            var lang = {{ lang|JSON }};
+            var langs = {{ app.langs|JSON }};
+            var edit = {{ edit|JSON }};
+            var saveUrl = "{% url "edit_module_detail_screens" domain app.id module.id %}";
+            var parentModules = {{ parent_modules|JSON }};
+
             for (var i = 0; i < details.length; i++) {
                 var detail = details[i];
                 var detailScreenConfig = DetailScreenConfig.init({
@@ -55,11 +61,11 @@
                     sortRows: detail.sort_elements,
                     model: detail.model,
                     properties: detail.properties,
-                    lang: {{ lang|JSON }},
-                    langs: {{ app.langs|JSON }},
-                    edit: {{ edit|JSON }},
-                    saveUrl: "{% url "edit_module_detail_screens" domain app.id module.id %}",
-                    parentModules: {{ parent_modules|JSON }},
+                    lang: lang,
+                    langs: langs,
+                    edit: edit,
+                    saveUrl: saveUrl,
+                    parentModules: parentModules,
                     childCaseTypes: detail.child_case_types,
                     parentSelect: detail.parent_select,
                     contextVariables: COMMCAREHQ.app_manager.module_view
