Added way to resync webusers passwords

--- a/custom/ewsghana/templates/ewsghana/ewsconfig.html
+++ b/custom/ewsghana/templates/ewsghana/ewsconfig.html
@@ -62,6 +62,15 @@
                 </div>
             </div>
         </div>
+        <div class="row-fluid">
+            <div class="span12">
+                <div class="btn-toolbar">
+                    <button class="btn" id="resync_passwords">
+                        {% trans "Webusers passwords resync" %}
+                    </button>
+                </div>
+            </div>
+        </div>
     {% endif %}
 {% endblock %}
 
@@ -96,6 +105,12 @@
         $("#clear_stock_data").click(function() {
             var url = '{% url clear_stock_url domain %}';
             var successMessage = "{% trans "Started" %}";
+            _post(this, url, {success: successMessage});
+        });
+
+        $("#resync_passwords").click(function() {
+            var url = '{% url 'ews_resync_passwords' domain %}';
+            var successMessage = "{% trans "Resync started" %}";
             _post(this, url, {success: successMessage});
         });
 
