update navbar height handling in b3-migration css

--- a/corehq/apps/style/static/style/less/b3-migration.less
+++ b/corehq/apps/style/static/style/less/b3-migration.less
@@ -6,6 +6,8 @@ bootstrap 2 to 3 across the site.
 @import "includes-3/variables.less";
 @import "includes-3/mixins.less";
 
+@navbar-height: 60px;
+@navbar-padding-vertical: ((@navbar-height - @line-height-computed) / 2);
 
 @import "b3-migration/buttons.less";
 @import "b3-migration/dropdowns.less";
