--- a/corehq/apps/style/static/style/less/includes-3/variables.less
+++ b/corehq/apps/style/static/style/less/includes-3/variables.less
@@ -54,9 +54,8 @@
 @btn-default-bg:                 @cc-bg;
 @btn-default-border:             @cc-neutral-hi;
 
-// Todo: override the following coors after migration is complete
-@navbar-height:                           60px;
-@navbar-default-bg:                       #F4F4F4;
+@navbar-height:                  50px;
+@navbar-default-bg:              @cc-bg;
 
 @navbar-footer-height:            45px;
 @navbar-footer-link-color:        mix(darken(#ffffff, 10), @brand-primary, 90);
@@ -68,3 +67,5 @@
 @btn-footer-border: #cccccc;
 
 @breadcrumb-separator: '>';
+
+@grid-gutter-width: 20px;
