add b3-migration css file to base

--- a/corehq/apps/style/templates/style/base.html
+++ b/corehq/apps/style/templates/style/base.html
@@ -34,6 +34,14 @@
                   media="all"
                   href="{% new_static 'style/less/style.less' %}" />
         {% endcompress %}
+
+        {% compress css %}
+            <link type="text/less"
+                  rel="stylesheet"
+                  media="all"
+                  href="{% new_static 'style/less/b3-migration.less' %}" />
+        {% endcompress %}
+
         {% compress css %}
         {% block stylesheets %}{% endblock stylesheets %}
         {% endcompress %}
