rewrite list/detail table layout w/ knockout
just replacing the render() function with a knockout template
that largely just points to the custom elements created in js

--- a/corehq/apps/app_manager/templates/app_manager/partials/case_list.html
+++ b/corehq/apps/app_manager/templates/app_manager/partials/case_list.html
@@ -18,7 +18,9 @@
     {% trans "Display Properties" %}
 </legend>
 
-<div data-bind="jqueryElement: $listHome"></div>
+<div data-bind="with: shortScreen">
+    {% include 'app_manager/partials/case_list_properties.html' %}
+</div>
 
 <legend>
     {% trans "Filtering and Sorting" %}
