--- a/corehq/apps/app_manager/templates/app_manager/partials/case_detail.html
+++ b/corehq/apps/app_manager/templates/app_manager/partials/case_detail.html
@@ -4,7 +4,9 @@
 <legend>
     {% trans "Display Properties" %}
 </legend>
-<div data-bind="jqueryElement: $detailHome"></div>
+<div data-bind="with: longScreen">
+    {% include 'app_manager/partials/case_list_properties.html' %}
+</div>
 {% if request|toggle_enabled:"DETAIL_LIST_TABS" %}
     <a href="#" data-bind="click: longScreen.addTab">
         <i class="icon-plus"></i>
