Revert "pull out migration-related styles into separate file so that core styles can be used in new static site"
This reverts commit ea102e666c5453897828e8561a2152a3358da0d8.

--- a/corehq/apps/style/static/style/less/components-3/navbar.less
+++ b/corehq/apps/style/static/style/less/components-3/navbar.less
@@ -53,3 +53,31 @@
     margin-top: 6px;
   }
 }
+
+// ///////// BEGIN TEMPORARY BOOTSTRAP TRANSITION STYLES /////////
+.navbar-hq-main-menu {
+  .btn-toolbar {
+    margin-top: 15px;
+
+    a.btn {
+      font-size: 13px;
+      padding: 4px 12px;
+      .caret {
+        margin-left: 5px;
+      }
+    }
+  }
+
+  .dropdown-header {
+    text-transform: uppercase;
+    font-weight: bold;
+    margin-top: 5px;
+  }
+
+  .dropdown-menu > li > a:hover,
+  .dropdown-menu > li > a:focus {
+    background-color: @brand-primary;
+    color: #ffffff;
+  }
+}
+// ///////// END TEMPORARY BOOTSTRAP TRANSITION STYLES /////////
