--- a/corehq/apps/style/static/style/less/components-3/navs.less
+++ b/corehq/apps/style/static/style/less/components-3/navs.less
@@ -20,5 +20,11 @@
   }
 }
 
+// ///////// BEGIN TEMPORARY BOOTSTRAP TRANSITION STYLES /////////
+.nav-hq-sidebar {
+  font-size: 13px;
+}
+// ///////// END TEMPORARY BOOTSTRAP TRANSITION STYLES /////////
+
 
 
