form and doc improvements

--- a/corehq/apps/hqadmin/templates/hqadmin/prime_restore_cache.html
+++ b/corehq/apps/hqadmin/templates/hqadmin/prime_restore_cache.html
@@ -4,7 +4,7 @@
 {% load crispy_forms_tags_b3 %}
 {% block content %}
 
-<div class="container-fluid">
+<div class="container-fluid" data-ng-app="">
     <div class="row">
         <div id="hq-sidebar" class="col-md-2 col-hq-sidebar">
         </div>
