Remove pencil icon from flow of text
to stop the ui from jerking around.
http://manage.dimagi.com/default.asp?149239

--- a/corehq/apps/app_manager/templates/app_manager/releases.html
+++ b/corehq/apps/app_manager/templates/app_manager/releases.html
@@ -109,6 +109,8 @@
     }
     .build .edit-comment-pencil {
         display: none;
+        margin-left: 5px;
+        position: absolute;
     }
     .build:hover .edit-comment-pencil {
         display: inline;
