styling for case type select2

--- a/corehq/apps/public/static/public/less/components/flower.less
+++ b/corehq/apps/public/static/public/less/components/flower.less
@@ -38,6 +38,9 @@
     top: 360px;
     background-image: url('../images/flower-home/flower-home-xs.png');
   }
+  @media (max-width: @screen-xs-min) {
+    top: 350px;
+  }
 }
 
 @flower-icon-size-lg: 138px;
