--- a/corehq/apps/public/static/public/less/public-style.less
+++ b/corehq/apps/public/static/public/less/public-style.less
@@ -9,3 +9,4 @@
 @import "components/navbar.less";
 @import "components/form.less";
 @import "components/flower.less";
+@import "components/misc.less";
