--- a/custom/ewsghana/templates/ewsghana/multi_report.html
+++ b/custom/ewsghana/templates/ewsghana/multi_report.html
@@ -29,11 +29,46 @@
 {% if report.needs_filters %}
     {% include 'reports/standard/partials/description.html' %}
 {% else %}
+    <style>
+        .firstreport {
+            width: 70%;
+            float: left;
+        }
+
+        .other_reports {
+            width: 30%;
+            margin-bottom: 20px;
+            float: right;
+        }
+
+        #report_table_legend {
+            margin-top: -20px;
+        }
+
+        .row {
+            float: left;
+            width: 100%;
+        }
+    </style>
     {% for thisreport in reports %}
         <br/>
-        <h4 class="media-heading">{{ thisreport.report_table.title }}<br/><small>{{ subtitle1 }}</small><br/><small>{{ subtitle2 }}</small></h4>
-        {% include 'ewsghana/partials/report_table.html' with report_table=thisreport.report_table charts=thisreport.charts chart_span=thisreport.chart_span%}
-        <br/>
+        {% if forloop.counter == 1 %}
+            <div class="firstreport">
+                <h4 class="media-heading">{{ thisreport.report_table.title }}<br/><small>{{ subtitle1 }}</small><br/><small>{{ subtitle2 }}</small></h4>
+                {% include 'ewsghana/partials/report_table.html' with report_table=thisreport.report_table charts=thisreport.charts chart_span=thisreport.chart_span show_table=thisreport.show_table%}
+                <br/>
+            </div>
+        <div class="other_reports">
+        {% elif  forloop.last %}
+            </div>
+            <h4 class="media-heading">{{ thisreport.report_table.title }}<br/><small>{{ subtitle1 }}</small><br/><small>{{ subtitle2 }}</small></h4>
+            {% include 'ewsghana/partials/report_table.html' with report_table=thisreport.report_table charts=thisreport.charts chart_span=thisreport.chart_span show_table=thisreport.show_table%}
+            <br/>
+        {% else %}
+            <h4 class="media-heading">{{ thisreport.report_table.title }}<br/><small>{{ subtitle1 }}</small><br/><small>{{ subtitle2 }}</small></h4>
+            {% include 'ewsghana/partials/report_table.html' with report_table=thisreport.report_table charts=thisreport.charts chart_span=thisreport.chart_span show_table=thisreport.show_table%}
+            <br/>
+        {% endif %}
     {% endfor %}
 {% endif %}
 {% endblock %}
