--- a/corehq/apps/app_manager/templates/app_manager/partials/case_list_properties.html
+++ b/corehq/apps/app_manager/templates/app_manager/partials/case_list_properties.html
@@ -5,7 +5,7 @@
     <p data-bind="text: DetailScreenConfig.message.EMPTY_SCREEN, visible: !$root.edit && _.isEmpty(columns)"></p>
     <table class="table table-condensed detail-screen-table">
         <thead>
-            <tr>
+            <tr tabindex="999">
                 <th class="detail-screen-icon"></th>
                 <th class="detail-screen-field" data-bind="text: DetailScreenConfig.message.FIELD"></th>
                 <th class="detail-screen-header" data-bind="text: DetailScreenConfig.message.HEADER"></th>
@@ -18,7 +18,9 @@
             afterAdd: function (elem) { $(elem).hide().fadeIn() },
             beforeRemove: function (elem) { $(elem).fadeOut() }
         }">
-            <tr data-bind="css: {info: isTab}, attr: {'data-order': _sortableOrder}">
+            <tr data-bind="css: {info: isTab}, attr: {'data-order': _sortableOrder, 'tabindex': 1000 + $index()},
+                           copy: function () { return field.value; },
+                           paste: function (data) { console.log(data); }">
                 <td class="detail-screen-icon" data-bind="jqueryElement: $grip, visible: $root.edit"></td>
                 <!--ko if: !isTab -->
                     <td class="detail-screen-field control-group"
